# Software-Rasterizer

./: .gitignore  CMakeLists.txt  README.md
Data/Shaders/D3D12/: ScreenSizeTexturedQuad.hlsl
Engine/Source/Camera/: Camera.cpp  Camera.h
Engine/Source/Controller/: ControllerBase.cpp  ControllerBase.h  EditorController.cpp  GameController.cpp
Engine/Source/Core/: AppCore.cpp  AppCore.h  AppModeBase.cpp  AppModeBase.h  EngineUtils.h  EntryPoint.cpp  SoftwareRasterizer.cpp  SoftwareRasterizer.h  WindowsPlatform.cpp  WindowsPlatform.h
Engine/Source/Editor/: Editor.cpp  Editor.h
Engine/Source/Entity/: Entity.h  TransformObject.cpp  TransformObject.h
Engine/Source/EventSystem/: EventSystem.h
Engine/Source/InputSystem/: InputSystem.cpp  InputSystem.h
Engine/Source/InternalPlugins/: IInternalPlugin.h
Engine/Source/InternalPlugins/RenderDoc/: RenderDocPlugin.cpp  RenderDocPlugin.h
Engine/Source/Math/: AABB.cpp  AABB.h  MathUtils.h  Transform.cpp  Transform.h
Engine/Source/Renderer/: DrawDebugHelpers.cpp  RenderUtils.cpp  RenderUtils.h  RenderingPrimitives.h
Engine/Source/Renderer/Drawable/: Drawable.h
Engine/Source/Renderer/Drawable/ShapesUtils/: BasicShapes.cpp  BasicShapes.h
Engine/Source/Renderer/Model/3D/: Model3D.h
Engine/Source/Renderer/Model/3D/Assimp/: AssimpModel3D.cpp  AssimpModel3D.h  AssimpModel3DPBRSphere.cpp  AssimpModel3DPBRSphere.h
Engine/Source/Renderer/RHI/: RHITypes.cpp  RHITypes.h
Engine/Source/Renderer/RHI/D3D12/: D3D12GraphicsTypes_Internal.cpp  D3D12GraphicsTypes_Internal.h  D3D12RHI.cpp  D3D12RHI.h  D3D12Resources.cpp  D3D12Resources.h  D3D12Upload.cpp  D3D12Upload.h  D3D12Utility.cpp  D3D12Utility.h
Engine/Source/Renderer/RHI/Resources/: RHIBuffers.h  RHITexture.h
Engine/Source/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Engine/Source/Utils/: IOUtils.cpp  PerfUtils.h  Utils.cpp  Utils.h
Engine/Source/Window/: WindowProperties.h  WindowsWindow.h
